tf-aws/10-iam-ec2-default-vpc/c5-sg.tf
resource "aws_security_group" "allow_ssh_http" {
  vpc_id      = data.aws_vpc.default.id
  name        = "alb-sg"
  description = "Allow HTTP inbound traffic"

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge({
    "name" = "ssh_http" },
    local.common_tags
  )
}
